# corectrl

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  format.sh
src/: CMakeLists.txt  CONTRIBUTING.md  config.h.in  main.cpp  resources.qrc
src/app/: app.cpp  app.h  appfactory.cpp  appfactory.h  settings.cpp  settings.h  singleinstance.cpp  singleinstance.h  systray.cpp  systray.h
src/common/: cryptolayer.cpp  cryptolayer.h  fileutils.cpp  fileutils.h  icryptolayer.h  logger.h  mathutils.h  stringutils.cpp  stringutils.h
src/core/: commandqueue.cpp  commandqueue.h  devfsdatasource.h  exportable.h  filecache.cpp  filecache.h  icommandqueue.h  idatasink.h  idatasource.h  ifilecache.h  importable.h  iprofile.h  iprofileapplicator.h  iprofilefileparser.h  iprofileiconcache.h  iprofilemanager.h  iprofileparser.h  iprofilepart.h  iprofilepartprovider.h  iprofilepartview.h  iprofilepartxmlparser.h  iprofilepartxmlparserprovider.h  iprofilestorage.h  iprofileview.h  iprofileviewfactory.h  iqmlcomponentfactory.h  iqmlcomponentregistry.h  isession.h  isyscomponent.h  isyscomponentprofilepart.h  isysexplorer.h  isysmodel.h  isysmodelsyncer.h  isysmodelui.h  item.h  iuifactory.h  profile.cpp  profile.h  profilefactory.cpp  profilefactory.h  (+49 more)
src/core/ccpro/: ccproparser.cpp  ccproparser.h  zipdatasink.cpp  zipdatasink.h  zipdatasource.cpp  zipdatasource.h
src/core/components/: amdutils.cpp  amdutils.h  commonutils.cpp  commonutils.h  cpu.cpp  cpu.h  cpuprofilepart.cpp  cpuprofilepart.h  cpuqmlitem.cpp  cpuqmlitem.h  cpuutils.cpp  cpuutils.h  cpuxmlparser.cpp  cpuxmlparser.h  gpu.cpp  gpu.h  gpuprofilepart.cpp  gpuprofilepart.h  gpuqmlitem.cpp  gpuqmlitem.h  gpuxmlparser.cpp  gpuxmlparser.h  icpu.h  icpuprofilepart.h  igpu.h  igpuprofilepart.h
src/core/components/controls/: control.cpp  control.h  controlgroup.cpp  controlgroup.h  controlgroupprofilepart.cpp  controlgroupprofilepart.h  controlgroupqmlitem.cpp  controlgroupqmlitem.h  controlgroupxmlparser.cpp  controlgroupxmlparser.h  controlmode.cpp  controlmode.h  controlmodeprofilepart.cpp  controlmodeprofilepart.h  controlmodeqmlitem.cpp  controlmodeqmlitem.h  controlmodexmlparser.cpp  controlmodexmlparser.h  cpucontrolprovider.cpp  cpucontrolprovider.h  gpucontrolprovider.cpp  gpucontrolprovider.h  icontrol.h  icpucontrolprovider.h  idatasourcehandler.h  igpucontrolprovider.h  noop.cpp  noop.h  noopprofilepart.cpp  noopprofilepart.h  noopqmlitem.cpp  noopqmlitem.h  noopxmlparser.cpp  noopxmlparser.h
src/core/components/sensors/: cpusensorprovider.cpp  cpusensorprovider.h  graphitem.cpp  (+12 more)
src/core/info/: cpuinfo.cpp  cpuinfo.h  gpuinfo.cpp  gpuinfo.h  hwiddatasource.cpp  hwiddatasource.h  hwidtranslator.cpp  hwidtranslator.h  icpuinfo.h  igpuinfo.h  ihwidtranslator.h  infoproviderregistry.cpp  infoproviderregistry.h  iswinfo.h  swinfo.cpp  swinfo.h  vendor.h
src/helper/: CMakeLists.txt  helper.cpp  helper.h  helpercontrol.cpp  helpercontrol.h  helperids.h  helperkiller.cpp  helperkiller.h  helpermonitor.cpp  helpermonitor.h  helpersysctl.cpp  helpersysctl.h  ihelpercontrol.h  ihelpermonitor.h  ihelpersysctl.h  org.corectrl.helper.actions.ini  org.corectrl.helper.conf  org.corectrl.helper.policy  org.corectrl.helper.service.in  org.corectrl.helperkiller.actions.ini  org.corectrl.helperkiller.conf  org.corectrl.helperkiller.policy  org.corectrl.helperkiller.service.in  polkit.cpp  polkit.h
src/helper/pmon/: appregistry.cpp  appregistry.h  iappregistry.h  ipidsolver.h  ipmonmsgdispatcher.h  iprocessmonitor.h  msgdispatcher.cpp  msgdispatcher.h  nlprocexecmonitor.cpp  nlprocexecmonitor.h  nlprocexecsocket.cpp  nlprocexecsocket.h  processevent.h  processmonitor.cpp  processmonitor.h  processregistry.cpp  processregistry.h  procpidsolver.cpp  procpidsolver.h
src/helper/sysctl/: isysfswriter.h  msgreceiver.cpp  msgreceiver.h  sysfswriter.cpp  sysfswriter.h
src/qml/: AMDFanAutoForm.qml  AMDFanCurveForm.qml  AMDFanFixedForm.qml  AMDFanModeForm.qml  AMDPMAdvancedForm.qml  AMDPMAutoForm.qml  AMDPMDynamicFreqForm.qml  AMDPMFVStateForm.qml  AMDPMFVVoltCurveForm.qml  AMDPMFixedForm.qml  AMDPMFixedFreqForm.qml  AMDPMFreqModeForm.qml  AMDPMFreqOdForm.qml  AMDPMFreqRangeForm.qml  AMDPMFreqVoltForm.qml  AMDPMOverclockForm.qml  AMDPMOverdriveForm.qml  AMDPMPerfModeForm.qml  AMDPMPowerCapForm.qml  AMDPMPowerProfileForm.qml  AMDPMPowerStateForm.qml  AMDPMPowerStateModeForm.qml  AMDPMVoltCurveForm.qml  AMDPMVoltOffsetForm.qml  About.qml  CComboBox.qml  CGroupBox.qml  CIntInput.qml  CPUForm.qml  CPUFreqForm.qml  CPUFreqModeForm.qml  CurveControl.qml  FVControl.qml  FreqStateControl.qml  GPUForm.qml  Global.js  InfoPane.qml  ModeSelector.qml  NativeFileDialog.qml  NoopForm.qml  (+12 more)
src/translations/: lang_bg_BG.ts  lang_ca_ES.ts  lang_cs_CZ.ts  lang_de_DE.ts  lang_en_EN.ts  lang_es_ES.ts  lang_fr_FR.ts  lang_nl_NL.ts  lang_ru_RU.ts
tests/: CMakeLists.txt
tests/src/: main.cpp  test_amdfanauto.cpp  test_amdfancurve.cpp  test_amdfanfixed.cpp  test_amdfanmode.cpp  test_amdgpuinfopm.cpp  test_amdgpuinfopmodcv.cpp  test_amdgpuinfopmoverdrive.cpp  test_amdgpuinfouniqueid.cpp  test_amdgpuinfovbios.cpp  test_amdpmadvanced.cpp  test_amdpmauto.cpp  test_amdpmautolegacy.cpp  test_amdpmautor600.cpp  test_amdpmdynamicfreq.cpp  test_amdpmfixed.cpp  test_amdpmfixedfreq.cpp  test_amdpmfixedlegacy.cpp  test_amdpmfixedr600.cpp  test_amdpmfreqmode.cpp  test_amdpmfreqod.cpp  test_amdpmfreqrange.cpp  test_amdpmfreqvolt.cpp  test_amdpmfvstate.cpp  test_amdpmfvvoltcurve.cpp  test_amdpmoverclock.cpp  test_amdpmperfmode.cpp  test_amdpmpowercap.cpp  test_amdpmpowerprofile.cpp  test_amdpmpowerstate.cpp  test_amdpmvoltcurve.cpp  test_amdpmvoltoffset.cpp  test_amdppdpmhandler.cpp  test_amdutils.cpp  test_commandqueue.cpp  test_commonutils.cpp  test_control.cpp  test_controlgroup.cpp  test_controlmode.cpp  test_cpu.cpp  (+24 more)
tests/src/common/: commandqueuestub.h  controlmock.h  hwidtranslatorstub.h  ppdpmhandlermock.h  sensormock.h  stringdatasourcestub.h  stringpathdatasourcestub.h  uintdatasourcestub.h  vectorstringdatasourcestub.h
(+341 files in other folders)
